# kolmo.wiazor.com_v.2.1.1

./: .env.example  .gitignore  CONNECTOR_README.md  FETCH_MISSING_DAYS_SUMMARY.md  README.md  dtkt_connector.py  pyproject.toml  requirements.txt
data/export/: cbr_of_rub.json  kolmo_history.json  kolmo_history_2021-07-01_2026-01-19.json  kolmo_history_2021-07-01_2026-01-22.json  kolmo_history_2021-07-01_2026-02-04.json  kolmo_history_2022-07-01_2026-02-06.json
db/migrations/: 001_initial_schema.sql  002_kolmo_deviation_precision.sql  003_update_provider_names.sql  004_add_rub_columns_and_populate.sql
example/: App.tsx  index.css
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
scripts/: FETCH_MISSING_DAYS_README.md  backfill_historical.py  check_schema.py  cleanup_dates.py  compute_row_values.py  debug_golden_row.py  diag_winner_2022_07_01.py  export_cbr_rub.py  export_json.py  fetch_missing_days.py  fetch_till_today.py  generate_golden_csv.py  inspect_kolmo_history.py  kalculator.py  query_date.py  regenerate_golden.py  report_last_20_days.py  report_last_20_days_full.py  report_markers.py  run_migrations.py  sample_rub_transform.py  scheduler.py  test_k_value.py  update_kolmo_history.py
scripts/archive/: enrich_kolmo_with_frankfurter.py  fetch_cbr_bulk.py  fetch_missing_days.py  repair_deviation.py
src/kolmo/: __init__.py  config.py  database.py  main.py  models.py
src/kolmo/api/: __init__.py  routes.py  schemas.py
src/kolmo/computation/: __init__.py  calculator.py  engine.py  transformer.py  winner.py
src/kolmo/export/: __init__.py  json_exporter.py
src/kolmo/providers/: __init__.py  base.py  cbr.py  frankfurter.py  freecurrencyapi.py  manager.py  twelvedata.py
tests/: __init__.py  test_computation.py  test_golden_dataset.py  test_kalculator.py
tests/golden/: kolmo_reference_data.csv
