[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kolmo-wiazor"
version = "2.1.1"
description = "KOLMO.wiazor.com - DTKT Currency Triangle Monitoring System"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "DTKT Architecture Team", email = "arch@dtkt.wiazor.com" }
]
keywords = ["forex", "exchange-rates", "clearing", "dtkt", "kolmo"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "httpx>=0.24.0",
    "asyncpg>=0.28.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "tenacity>=8.2.0",
    "apscheduler>=3.10.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.0.290",
    "mypy>=1.5.0",
    "bandit>=1.7.0",
]

[project.scripts]
kolmo = "kolmo.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kolmo"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src/kolmo --cov-report=term-missing"

[tool.coverage.run]
source = ["src/kolmo"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
]
